--- a/javascript/JavaScript Tutorial/JavaScript Arithmetic/Arithmetic Operations3.html
+++ b/javascript/JavaScript Tutorial/JavaScript Arithmetic/Arithmetic Operations3.html
@@ -6,13 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>JavaScript Arithmetic</h2>
-    <p>A typical arithmetic operation takes two numbers ( or variables) and produces a new number. </p>
+    <h1>JavaScript Arithmetic</h1>
+    <h2>Arithmetic Operations</h2>
+    <p>A typical arithmetic operation takes two numbers ( or expressions ) and produces a new number.</p>
     <p id="demo"></p>
     <script>
-        let a=100;
-        let b=50;
-        let x=a+b;
+        let a=3;
+        let x=(100+50)*a;
         document.getElementById("demo").innerHTML = x;
     </script>
 </body>
